# SchoolData

./: .gitignore  Local SQLServer.session.sql  README.md  config.bak  index.html  notes.md  output.txt  pyproject.toml  requirements.txt  streamlit_main.py
.streamlit/: config.toml
backup_data/backup_data/: bonds.csv  coupons.csv  deals.csv  detail_log_data.json  detail_log_data.pkl  detail_log_data_0-1814.json  detail_log_data_0-448.json  schools.csv  search_log.pkl  search_log_data.pkl  target_coupons.csv
pages/: keyword_scraper.py  keyword_scraper_(beta).py  update_bond_data.py
wheels/: pprp-0.2.5-py3-none-any.whl
working/: Scraper Instructions.md  doc_spider.py  package-lock.json  package.json  polars_backup.py  scrape_data.ipynb  scrape_minutes.ipynb
working/crawl_state/: requests.seen
