[tool.poetry]
name = "schooldata"
version = "0.1.0"
description = "Viewing school bond data for Round Rock"
authors = ["Copeland Carter <smartycope@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.34.2"
pandas = "^3.0.3"
cryptography = "^49.0.0"
pprp = "^0.2.7"
narwhals = "^2.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
